# anonymization-ui

./: .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierrc.js  .prettierrc.json  Dockerfile  README.md  config-overrides.js  cypress.json  default.nix  docker-compose.yml  nginx.conf  npm-shrinkwrap.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: cd.yml
.storybook/: main.js  preview.js
backend/: .dockerignore  .env.template  Cargo.toml  Dockerfile  README.md  cert.conf.pem
backend/src/: error.rs  main.rs
config/: env.js  modules.js  webpack.config.js  webpackDevServer.config.js
examples/: config-Medical.json
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/pkg/: sgx_quote.d.ts  sgx_quote.js  sgx_quote_bg.wasm  sgx_quote_bg.wasm.d.ts
frontend/public/: cert.conf.pem
frontend/src/: App.tsx  AppContext.tsx  Router.tsx  main.tsx
public/: index.html  manifest.json
scripts/: build_push.sh  build_push_design_system.sh  build_test_e2e.sh  install_all_players.sh  start.js
src/: App.less  App.tsx  AppContext.tsx  Router.tsx  bootstrap.ts  index.tsx  react-app-env.d.ts  serviceWorker.ts
src/Views/: Anonymization.tsx  AnonymizationList.tsx  Anonymize.tsx  Configuration.tsx  ConfigurationList.tsx  Create.tsx  CreateConfiguration.tsx  Edit.tsx  FineTuningList.tsx  Import.tsx  ImportConfiguration.tsx  Upload.tsx  style.less
src/components/: CSVReader.tsx  DeleteAnonymizationModal.tsx  DeleteConfigModal.tsx  DeleteModal.tsx  (+9 more)
(+163 files in other folders)
