[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
tokio-util = "0.7.8"
