[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio-util = "0.7.8"
tracing = "0.1.37"

[profile.release]
strip = true
